...
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:text="@string/acct__fb_attempting_sign_in"/>

    <com.expedia.account.input.ErrorableInputTextPresenter
        android:id="@+id/email_address_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/acct__Email_Address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:visibility="invisible"
        android:paddingTop="16dp"
        app:acct__eit_errorString="@string/acct__Must_enter_valid_email" />

    <com.expedia.account.input.ErrorableInputTextPresenter
        android:id="@+id/password_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:hint="@string/acct__fb_brand_password_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
...
