...
        android:id="@+id/keyboard_visible_space_above_buttons"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/acct__keyboard_visible_space_above_buttons"
        android:visibility="gone"/>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/acct__sign_in_button_height"
        android:text="@string/acct__Sign_In" />

    <FrameLayout
...
            android:id="@+id/keyboard_hidden_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/sign_in_with_facebook_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/acct__sign_in_button_height"
                android:layout_marginTop="6dp"
                android:background="@drawable/acct__bg_btn_facebook"
                android:textColor="@color/acct__btn_facebook_text"
...
