<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/suggestion_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingLeft="4dp"
        android:visibility="gone"
        android:textSize="@dimen/acct__suggestion_error_text_size"
        android:layout_below="@+id/input_text"
        tools:text="Your input is wrong and you should feel bad"/>

    <com.expedia.account.view.AccessibleEditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="13dp"
        android:paddingBottom="15dp"
        android:paddingRight="28dp"
        android:background="@drawable/acct__bg_input_text"
        tools:ignore="TextFields" />

    <com.expedia.account.view.CheckmarkPresenter
        android:id="@+id/checkmark_presenter"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="@dimen/acct__checkmark_margin" />

</merge>